--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,13 @@
 {
   "env": {
-    "node": true,
+    "node": false,
     "browser": true,
     "es6": true
   },
   "parser": "babel-eslint",
   "extends": "airbnb",
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "no-undef": "error"
   }
 }
