--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prop-types": "^15.6.2",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
-    "react-native-vector-icons": "^6.0.2"
+    "react-native-vector-icons": "^6.0.2",
+    "react-navigation": "^2.18.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
